--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-asgiref==3.7.2
-Django==3.2.1
+asgiref==3.6.0
+autopep8==2.0.1
+Django==4.1.7
 Pillow==9.5.0
 psycopg2==2.9.6
-pytz==2023.3
-sqlparse==0.4.4
+pycodestyle==2.10.0
+sqlparse==0.4.3
 sweetify==2.3.1
+tzdata==2023.3
