--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.6.0
 autopep8==2.0.1
 Django==4.1.7
 Pillow==9.5.0
-psycopg2==2.9.6
+psycopg2-binary==2.9.6
 pycodestyle==2.10.0
 sqlparse==0.4.3
 sweetify==2.3.1
